flags for invert; option to always forwards digit

--- a/segments_avr_firmware/Makefile
+++ b/segments_avr_firmware/Makefile
@@ -9,8 +9,12 @@ F_CPU=16000000
 CC=avr-gcc
 OBJCOPY=avr-objcopy
 
+DEFAULT_FORWARD_ALWAYS ?= 0
+MAG_TRIGGER_INVERT ?= 1
+CFLAGS+=-DDEFAULT_FORWARD_ALWAYS=$(DEFAULT_FORWARD_ALWAYS) -DMAG_TRIGGER_INVERT=$(MAG_TRIGGER_INVERT)
+
 # Compiler Flags
-CFLAGS=-Os -DF_CPU=$(F_CPU) -mmcu=$(MCU)
+CFLAGS+=-Os -DF_CPU=$(F_CPU) -mmcu=$(MCU)
 
 # Source Files
 SRC=$(wildcard *.c)
